# mechlmm

./: .gitignore  .gitmodules  Notes.txt  README.md  llm_core.py  ollama_base_test.py  system-structure.drawio  todo.db  ubuntu20_noetic_init.sh  ubuntu24_jazzy_init.sh
data/: raw_conversion.txt
gemini_playground/: db_connector.py  debuging_gui.py  dialogue_analyzer.py  gemini_core.py  notes.txt  test.py
genmi_playground/: api_test.py  debuging_gui.py  dialogue_analyzer.py  gemini_core.py
langchain_playground/: ollama_core.py  ollama_image.py  opencv_ros.py  opencv_test.py
mechllm_ws/: tutorial_two.dot
mechlmm_inten/: .gitignore  Action Detection Refined.ipynb  action.h5  skeleton_test.py  tobil_test.py
mechlmm_py/: pyproject.toml  requirements.txt  setup.py
mechlmm_py/mechlmm_py/: __init__.py  debug_core.py  lmm_function_pool.py  mechlmm_core.py  mechlmm_server.py  postgres_core.py  stt_core.py  tts_core.py  utilities_core.py  vision_core.py  vision_core_bak.py
mechlmm_py/src/mechlmm_py/: __init__.py  config.py  db_core.py  debug_core.py  mechlmm.db  stt_core.py  test.py  tts_core.py  utilities_core.py  vision_core.py
mechlmm_py/tests/: test.py
mechlmm_py2/: pyproject.toml  requirements.txt  setup.py
mechlmm_py2/mechlmm_py/: postgres_core.py  utilities_core.py
mechlmm_py2/src/mechlmm_py/: __init__.py
mechlmm_server/: main.py  mechlmm_core.py  mechlmm_server.py  pyproject.toml  requirements.txt  rulebook.txt  setup.py
mechlmm_server/mechlmm_server/: __init__.py  mechlmm_core.py  mechlmm_server.py
mechlmm_server/mechlmm_server/templates/: index.html
mechlmm_server232/: mechlmm_server.py  pyproject.toml
mechlmm_tools/: .gitignore  action.h5  base_cv.py  camera_server.py  requirement.txt  skeleton_inten.py  socketCore.py  yolo_detect_base.py
mechlmm_web/: package-lock.json  package.json
test/: opai.py  (+17 more)
(+441 files in other folders)
