[project]
name = "mechlmm-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cricel", email = "cricel.design@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gtts>=2.5.4",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "termcolor>=3.1.0",
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.98",
    "pyaudio>=0.2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
