[project]
name = "mechlmm-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cricel", email = "cricel.design@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
