[project]
name = "mechlmm-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.1.5",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.25",
    "mechlmm-py",
]

[tool.uv.sources]
mechlmm-py = { path = "../mechlmm_py", editable = true }
